# core

./: .gitignore  .gitleaks.yml  CHANGELOG.md  README.md  eslint.config.mjs  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: branch-protection.yml  ci.yml  continuous-security.yml  publish.yml  release.yml  security-scan.yml
docs/: DOCUMENTATION_ASSESSMENT.md  README.md  SECURITY.md
docs/architecture/: PHASE_4_DOCUMENTATION_SUMMARY.md
docs/architecture-decisions/: ADR-001-ecosystem-design.md  ADR-006-centralized-feature-toggles.md
docs/guides/: DEPLOYMENT_PLAYBOOK.md  DEVELOPER_ONBOARDING.md  IDE_EXTENSION_GUIDE.md  MCP_CONTEXT_SERVER.md  MCP_GATEWAY_INTEGRATION_GUIDE.md  TROUBLESHOOTING_GUIDE.md  UIFORGE_MCP_INTEGRATION_GUIDE.md
docs/operations/: ECOSYSTEM_RELEASE_PIPELINE.md
docs/project/: PROJECT_CONTEXT.MD
docs/reports/: DOCKER_STANDARDS_INTEGRATION.md  ISSUES_FIXED_SUMMARY.md  PLANS_INTEGRATION_COMPLETE.md  SCALABLE_DOCKER_COMPOSE_IMPLEMENTATION_COMPLETE.md
docs/standards/: SECURITY.md
patterns/ai/: README.md
patterns/ai-tools/: code-analyzer.js
patterns/cloud-native/: README.md
patterns/go/: README.md
patterns/python/project-template/: pyproject.toml
patterns/python/project-template/src/: main.py
patterns/python/project-template/tests/: test_main.py
patterns/rust/project-templates/web-service/: Cargo.toml  README.md
patterns/rust/project-templates/web-service/src/: config.rs  errors.rs  main.rs
patterns/rust/project-templates/web-service/src/handlers/: health.rs  users.rs
patterns/rust/project-templates/web-service/src/models/: mod.rs  response.rs
scripts/: forge-features  forge-patterns-cli.js  integrate-all-projects.sh  integrate-mcp-gateway.sh  integrate-uiforge-mcp.sh  integrate-uiforge-webapp.sh  integrate.js  prevent-duplicates.sh  release-core.sh  remove-duplicates.sh
src/: index.ts
test/: performance-benchmark.js  plugin-system-validation.js
(+78 files in other folders)
